# grism-kinematics

./: README.md  drizzle_utils.py  notebook_utils.py  program_types.json  pyproject.toml  utils.py
dingo/: __init__.py  dither.py  fitting.py  galaxy.py  grism.py  plot.py  utils.py
src/: galaxy.py  kinematics.py  utils.py
