[build-system]
requires = ["setuptools>=61.0", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "DINGO"
dynamic = ["version"]
description = "Dispersion-based INference for Galaxy Observations using R+C Grism Data"
authors = [
  {name = "Yichen Liu", email = "yichenliu@arizona.edu"}
]
requires-python = ">=3.8"
dependencies = [
  "numpy",
  "torch",
  "astropy",
  "matplotlib",
  "reproject",
]
readme = "README.md"
license = "MIT"

[tool.setuptools.packages.find]
include = ["dingo"]

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
local_scheme = "node-and-date"
